20070625
 - (dtucker) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2007/06/13 00:21:27
     [scp.c]
     don't ftruncate() non-regular files; bz#1236 reported by wood AT
     xmission.com; ok dtucker@

20070614
 - (dtucker) [cipher-ctr.c umac.c openbsd-compat/openssl-compat.h] Move the
   USE_BUILTIN_RIJNDAEL compat goop to openssl-compat.h so it can be
   shared with umac.c.  Allows building with OpenSSL 0.9.5 again including
   umac support.  With tim@ djm@, ok djm.
 - (dtucker) [openbsd-compat/openssl-compat.h] Merge USE_BUILTIN_RIJNDAEL
   sections.  Fixes builds with early OpenSSL 0.9.6 versions.
 - (dtucker) [openbsd-compat/openssl-compat.h] Remove redundant definition
   of USE_BUILTIN_RIJNDAEL since the <0.9.6 test is covered by the
   subsequent <0.9.7 test.

20070612
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2007/06/11 09:14:00
     [channels.h]
     increase default channel windows; ok djm
   - djm@cvs.openbsd.org 2007/06/12 07:41:00
     [ssh-add.1]
     better document ssh-add's -d option (delete identies from agent), bz#1224
     new text based on some provided by andrewmc-debian AT celt.dias.ie;
     ok dtucker@
   - djm@cvs.openbsd.org 2007/06/12 08:20:00
     [ssh-gss.h gss-serv.c gss-genr.c]
     relocate server-only GSSAPI code from libssh to server; bz #1225
     patch from simon AT sxw.org.uk; ok markus@ dtucker@
   - djm@cvs.openbsd.org 2007/06/12 08:24:20
     [scp.c]
     make scp try to skip FIFOs rather than blocking when nothing is listening.
     depends on the platform supporting sane O_NONBLOCK semantics for open
     on FIFOs (apparently POSIX does not mandate this), which OpenBSD does.
     bz #856; report by cjwatson AT debian.org; ok markus@
   - djm@cvs.openbsd.org 2007/06/12 11:11:08
     [ssh.c]
     fix slave exit value when a control master goes away without passing the
     full exit status by ensuring that the slave reads a full int. bz#1261
     reported by frekko AT gmail.com; ok markus@ dtucker@